--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </ol>
       </div>
       <div class="row">
-          <table class="table" id="dataTable">
+          <table class="table table-hover" id="dataTable">
           </table>
       </div>
 
