Dowload file from s3

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div class="col-md-4 col-md-offset-5">
         <h3><b>Amazon S3</b></h3>
     </div>
+    <button type="button" style="margin-top:5px;margin-right:5px" class="btn btn-primary" id="changeBucket">Change Bucket</button>
+    <button type="button" style="margin-top:5px;margin-right:5px" class="btn btn-primary" id="uploadFile">Upload</button>
 </div>
 </div>
 <div class="addconnection">
