--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                         <div class="form-group">
                             <label for="connectionName">Connection Name</label>
                             <input type="text" class="form-control" id="connectionName" required
-                                   placeholder="Connection Name">
+                                   placeholder="Connection Name"   maxlength="20">
                           <span id="connectionName" class="help-block">
-                            Any name that helps to Identify the connection.
+                            Any name that helps to Identify the connection
                           </span>
                         </div>
                         <div class="form-group">
