--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                     <input type="file" class="btn btn-info" id="uploadFile" />
+                     <input type="file" id="uploadFile" />
                     </form>
 
                     <p id="fileUploadError" class="text-danger hide"></p>
